--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "express-fileupload": "^1.5.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
-    "resend": "^6.6.0"
+    "node-cron": "^4.2.1",
+    "resend": "^6.6.0",
+    "socket.io": "^4.8.3"
   }
 }
