--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
+    "nodemailer": "^8.0.0",
     "resend": "^6.6.0"
   }
 }
